--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,12 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <dimen name="button">15sp</dimen>
+    <dimen name="caption">13sp</dimen>
+    <dimen name="body">14dp</dimen>
+    <dimen name="subheading">17sp</dimen>
+    <dimen name="title">21sp</dimen>
+    <dimen name="headline">24sp</dimen>
+
 </resources>
