--- a/app/src/main/res/xml/syncadapter.xml
+++ b/app/src/main/res/xml/syncadapter.xml
@@ -3,6 +3,6 @@
     android:accountType="guo.com"
     android:contentAuthority="@string/news_provider_authority"
     android:userVisible="false"
-    android:supportUploading="false"
+    android:supportsUploading="false"
     android:allowParallelSyncs="false"
-    android:isAlwaysSyncable="true"/>
+    android:isAlwaysSyncable="false"/>
