--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,7 @@
             android:layout_height="wrap_content"/>
         <android.support.design.widget.TabLayout
             android:id="@+id/tab_layout"
+            app:tabGravity="fill"
             app:tabMode="scrollable"
             app:tabTextColor="@android:color/white"
             app:tabIndicatorColor="@color/colorAccent"
@@ -28,15 +29,9 @@
 
         </android.support.design.widget.TabLayout>
     </android.support.design.widget.AppBarLayout>
-    <!--<android.support.v4.widget.NestedScrollView-->
-        <!--android:background="@color/colorAccent"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent">-->
-
         <android.support.v4.view.ViewPager
         app:layout_behavior= "@string/appbar_scrolling_view_behavior"
             android:id="@+id/view_pager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
-    <!--</android.support.v4.widget.NestedScrollView>-->
 </android.support.design.widget.CoordinatorLayout>
