--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingTop="4dp"
     tools:context=".ui.NewsFragment">
 
     <android.support.v4.widget.SwipeRefreshLayout
@@ -12,10 +13,6 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            />
+            android:layout_height="match_parent" />
     </android.support.v4.widget.SwipeRefreshLayout>
-            <!--android:background="@color/colorAccent" -->
-
-
 </FrameLayout>
