--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
             android:id="@+id/toolbar"
             app:title="@string/app_name"
             app:titleTextColor="@android:color/white"
-            app:layout_scrollFlags="scroll"
+            app:layout_scrollFlags="scroll|snap"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
         <android.support.design.widget.TabLayout
