--- a/app/src/main/res/xml/news_appwidget_provider_info.xml
+++ b/app/src/main/res/xml/news_appwidget_provider_info.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
     android:minHeight="110dp"
-    android:minWidth="250dp"
+    android:minWidth="180dp"
+    android:resizeMode="horizontal|vertical"
     android:updatePeriodMillis="180000"
     android:previewImage="@mipmap/ic_launcher"
     android:widgetCategory="home_screen">
