--- a/app/src/main/res/layout/activity_select_interested_section.xml
+++ b/app/src/main/res/layout/activity_select_interested_section.xml
@@ -11,53 +11,26 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        app:elevation="@dimen/appbar_elevation"
-        app:navigationIcon="@drawable/ic_close_black_24dp" />
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            app:elevation="@dimen/appbar_elevation"
+            app:navigationIcon="@drawable/ic_close_black_24dp"
+            app:title="Select Your Interested Sections" />
     </android.support.design.widget.AppBarLayout>
 
-    <android.support.v4.widget.NestedScrollView
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    <!--<android.support.v4.widget.NestedScrollView-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent">-->
+
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/interested_sections"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:orientation="vertical">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:text="My sections"
-                android:textColor="@color/primary_text_dark"
-                android:textSize="@dimen/subheading" />
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/interested_sections"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp" />
-        </LinearLayout>
-    </android.support.v4.widget.NestedScrollView>
-    <!--<TextView-->
-    <!--android:text="My sections"-->
-    <!--android:textSize="@dimen/subheading"-->
-    <!--android:textColor="@color/primary_text_dark"-->
-    <!--android:layout_marginTop="4dp"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content" />-->
-
-    <!--<android.support.v7.widget.RecyclerView-->
-    <!--android:id="@+id/all_sctions"-->
-    <!--android:layout_marginTop="4dp"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"/>-->
+        android:layout_height="match_parent"
+        android:layout_marginTop="4dp"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+    <!--</android.support.v4.widget.NestedScrollView>-->
 
 </android.support.design.widget.CoordinatorLayout>
