--- a/app/src/main/res/layout/activity_select_section_id.xml
+++ b/app/src/main/res/layout/activity_select_section_id.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,15 +7,21 @@
     android:orientation="vertical"
     tools:context=".appwidget.SelectWidgetSectionActivity">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:title="Please set a section"
+    <android.support.design.widget.AppBarLayout
         app:elevation="@dimen/appbar_elevation"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        app:title="Select widget section"
+        android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"/>
+    </android.support.design.widget.AppBarLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/section_list"
+        android:layout_marginTop="8dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
