--- a/app/src/main/res/layout/activity_comment.xml
+++ b/app/src/main/res/layout/activity_comment.xml
@@ -40,6 +40,9 @@
 
     <android.support.v7.widget.AppCompatEditText
         android:id="@+id/comment"
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@null" />
