--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,28 +10,49 @@
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
-            app:title="@string/app_name"
-            app:titleTextColor="@android:color/white"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             app:layout_scrollFlags="scroll|snap"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-        <android.support.design.widget.TabLayout
-            android:id="@+id/tab_layout"
-            app:tabGravity="fill"
-            app:tabMode="scrollable"
-            app:tabTextColor="@android:color/white"
-            app:tabIndicatorColor="@color/primary_text_dark"
-            app:tabSelectedTextColor="@color/primary_text_dark"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            app:title="@string/app_name"
+            app:titleTextColor="@android:color/white" />
 
-        </android.support.design.widget.TabLayout>
-    </android.support.design.widget.AppBarLayout>
-        <android.support.v4.view.ViewPager
-        app:layout_behavior= "@string/appbar_scrolling_view_behavior"
-            android:id="@+id/view_pager"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <android.support.design.widget.TabLayout
+                android:id="@+id/tab_layout"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                app:tabGravity="fill"
+                app:tabIndicatorColor="@color/primary_text_dark"
+                app:tabMode="scrollable"
+                app:tabSelectedTextColor="@color/primary_text_dark"
+                app:tabTextColor="@android:color/white">
+
+            </android.support.design.widget.TabLayout>
+
+            <ImageView
+                android:id="@+id/add_section"
+                android:layout_width="45dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="right|end"
+                android:background="@color/colorPrimary"
+                android:clickable="true"
+                android:paddingBottom="4dp"
+                android:paddingTop="4dp"
+                android:src="@drawable/ic_add_black_24dp" />
+        </LinearLayout>
+    </android.support.design.widget.AppBarLayout>
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/view_pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 </android.support.design.widget.CoordinatorLayout>
