--- a/app/src/main/res/layout/activity_news.xml
+++ b/app/src/main/res/layout/activity_news.xml
@@ -8,109 +8,126 @@
     tools:context="com.guo.news.ui.NewsActivity">
 
     <android.support.design.widget.AppBarLayout
-        android:fitsSystemWindows="true"
         android:layout_width="match_parent"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         android:layout_height="300dp"
+        android:fitsSystemWindows="true"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:elevation="@dimen/appbar_elevation">
 
         <android.support.design.widget.CollapsingToolbarLayout
-            android:fitsSystemWindows="true"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:fitsSystemWindows="true"
             app:contentScrim="?attr/colorPrimary"
             app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
 
             <ImageView
                 android:id="@+id/news_image"
-                android:fitsSystemWindows="true"
+                android:transitionName="@string/transition_content_image"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:fitsSystemWindows="true"
                 android:scaleType="centerCrop"
                 app:layout_collapseMode="parallax" />
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
-                app:layout_collapseMode="pin"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize" />
+                android:layout_height="?attr/actionBarSize"
+                app:layout_collapseMode="pin" />
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        app:behavior_overlapTop="40dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingEnd="16dp"
-            android:paddingStart="16dp">
+            android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/title"
+        <android.support.v7.widget.CardView
+            android:layout_margin="8dp"
+            app:cardElevation="@dimen/cardview_default_elevation"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                tools:text="大侠的结局"
-                android:textColor="@color/primary_text_dark"
-                android:textSize="@dimen/title" />
+                android:orientation="vertical"
+                android:paddingEnd="16dp"
+                android:paddingStart="16dp">
+
+                <TextView
+                    android:id="@+id/title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:textColor="@color/primary_text_dark"
+                    android:textSize="@dimen/title"
+                    tools:text="大侠的结局" />
 
 
+                <TextView
+                    android:id="@+id/byline"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right|end"
+                    android:layout_marginTop="4dp"
+                    android:textColor="@color/second_text_dark"
+                    android:textSize="@dimen/caption"
+                    tools:text="嵩阳铁剑" />
 
-            <TextView
-                android:id="@+id/byline"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:layout_gravity="right|end"
-                android:textColor="@color/second_text_dark"
-                tools:text="嵩阳铁剑"
-                android:textSize="@dimen/caption" />
-
-            <TextView
-                android:id="@+id/date"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:layout_gravity="right|end"
-                tools:text="2016-11-23"
-                android:textColor="@color/second_text_dark"
-                android:textSize="@dimen/caption" />
-
-
-            <TextView
-                android:id="@+id/body"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                tools:text="隐退"
-                android:textColor="@color/primary_text_dark"
-                android:textSize="@dimen/body" />
+                <TextView
+                    android:id="@+id/date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right|end"
+                    android:layout_marginTop="4dp"
+                    android:textColor="@color/second_text_dark"
+                    android:textSize="@dimen/caption"
+                    tools:text="2016-11-23" />
 
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1px"
-                android:layout_marginTop="4dp"
-                android:background="@color/divider_dark" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:text="评论"
-                android:textColor="@color/primary_text_dark"
-                android:textSize="@dimen/title" />
+                <TextView
+                    android:id="@+id/body"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    android:textColor="@color/primary_text_dark"
+                    android:textSize="@dimen/body"
+                    tools:text="隐退" />
 
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/comment_list"
-                android:layout_marginTop="4dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1px"
+                    android:layout_marginTop="4dp"
+                    android:background="@color/divider_dark" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    android:text="评论"
+                    android:textColor="@color/primary_text_dark"
+                    android:textSize="@dimen/title" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp" />
+
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/comment_list"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp" />
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
         </LinearLayout>
 
     </android.support.v4.widget.NestedScrollView>
@@ -119,9 +136,12 @@
         android:id="@+id/add_comment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:elevation="@dimen/fab_elevation"
-        android:layout_gravity="right|bottom"
+        android:layout_gravity="end|bottom"
         android:layout_marginBottom="16dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
-        android:src="@drawable/ic_edit_white_24dp" />
+        android:src="@drawable/ic_edit_white_24dp"
+        app:elevation="@dimen/fab_elevation"
+        app:layout_behavior="com.guo.news.ui.widget.HideBehavior"
+        app:pressedTranslationZ="6dp" />
 </android.support.design.widget.CoordinatorLayout>
