--- a/app/src/main/res/layout/item_app_widget.xml
+++ b/app/src/main/res/layout/item_app_widget.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:background="@android:color/white"
     android:layout_width="match_parent"
-    android:layout_height="65dp"
+    android:layout_height="wrap_content"
     android:padding="4dp"
     android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/thumbnail"
         android:layout_width="65dp"
-        android:layout_height="match_parent"
+        android:layout_height="65dp"
         android:scaleType="centerCrop"
         tools:src="@mipmap/ic_launcher" />
 
@@ -21,6 +21,20 @@
         android:layout_marginLeft="6dp"
         android:textColor="@color/primary_text_dark"
         android:textSize="@dimen/body"
+        android:maxLines="2"
+        android:layout_toRightOf="@id/thumbnail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
-</LinearLayout>
+    <TextView
+        android:id="@+id/byline"
+        tools:text="@string/app_name"
+        android:layout_marginLeft="6dp"
+        android:textColor="@color/colorPrimary"
+        android:textSize="@dimen/body"
+        android:maxLines="2"
+        android:layout_alignParentRight="true"
+        android:layout_below="@id/headline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+</RelativeLayout>
