--- a/app/src/main/res/layout/item_news.xml
+++ b/app/src/main/res/layout/item_news.xml
@@ -16,6 +16,7 @@
 
     <ImageView
         android:id="@+id/image"
+        android:transitionName="@string/transition_content_image"
         android:scaleType="centerCrop"
         android:layout_width="150dp"
         android:layout_height="200dp" />
