--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,4 +12,5 @@
 
     <dimen name="appbar_elevation">8dp</dimen>
     <dimen name="fab_elevation">6dp</dimen>
+    <dimen name="app_widget_title_height">46dp</dimen>
 </resources>
