--- a/app/src/main/res/layout/activity_news.xml
+++ b/app/src/main/res/layout/activity_news.xml
@@ -66,6 +66,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
+                    android:textAllCaps="true"
                     android:textColor="@color/primary_text_dark"
                     android:textSize="@dimen/title"
                     tools:text="大侠的结局" />
