--- a/app/src/main/res/layout/item_app_widget.xml
+++ b/app/src/main/res/layout/item_app_widget.xml
@@ -20,7 +20,8 @@
         tools:text="@string/app_name"
         android:layout_marginLeft="6dp"
         android:textColor="@color/primary_text_dark"
-        android:textSize="@dimen/body"
+        android:textSize="@dimen/subheading"
+        android:textAllCaps="true"
         android:maxLines="2"
         android:layout_toRightOf="@id/thumbnail"
         android:layout_width="wrap_content"
