--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -6,4 +6,9 @@
         app:showAsAction="always"
         android:icon="@drawable/ic_settings"
         android:title="Set" />
+    <item
+        android:id="@+id/select"
+        app:showAsAction="ifRoom"
+        android:icon="@drawable/ic_add_black_24dp"
+        android:title="Select" />
 </menu>
