--- a/app/src/main/res/layout/activity_comment.xml
+++ b/app/src/main/res/layout/activity_comment.xml
@@ -23,13 +23,16 @@
             <TextView
                 android:id="@+id/publish"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_gravity="right"
-                android:layout_marginRight="8dp"
+                android:gravity="center"
+                android:paddingEnd="8dp"
+                android:paddingStart="8dp"
                 android:clickable="true"
+                android:background="?attr/selectableItemBackgroundBorderless"
                 android:text="提交"
-                android:textColor="@color/colorAccent"
-                android:textSize="@dimen/subheading" />
+                android:textSize="@dimen/subheading"
+                android:textColor="?attr/colorAccent" />
         </android.support.v7.widget.Toolbar>
     </android.support.design.widget.AppBarLayout>
 
