--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,16 +21,14 @@
 
         <android.support.design.widget.TabLayout
             android:id="@+id/tab_layout"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             app:tabGravity="fill"
             app:tabIndicatorColor="@color/primary_text_dark"
             app:tabMode="scrollable"
             app:tabSelectedTextColor="@color/primary_text_dark"
-            app:tabTextColor="@android:color/white">
+            app:tabTextColor="@android:color/white"/>
 
-        </android.support.design.widget.TabLayout>
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v4.view.ViewPager
