--- a/app/src/main/res/layout/item_app_widget.xml
+++ b/app/src/main/res/layout/item_app_widget.xml
@@ -29,13 +29,13 @@
     <TextView
         android:id="@+id/byline"
         tools:text="@string/app_name"
-        android:layout_marginLeft="6dp"
         android:textColor="@color/colorPrimary"
         android:textSize="@dimen/body"
-        android:maxLines="2"
+        android:singleLine="true"
         android:layout_alignParentRight="true"
+        android:layout_marginTop="4dp"
         android:layout_below="@id/headline"
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
         android:layout_height="wrap_content" />
 
 </RelativeLayout>
