--- a/app/src/main/res/layout/news_app_widget.xml
+++ b/app/src/main/res/layout/news_app_widget.xml
@@ -11,6 +11,7 @@
         android:background="@color/colorPrimary"
         android:orientation="horizontal">
         <ImageView
+            android:id="@+id/icon"
             android:layout_alignParentLeft="true"
             android:scaleType="centerInside"
             android:paddingTop="8dp"
@@ -18,15 +19,6 @@
             android:src="@mipmap/ic_launcher"
             android:layout_width="@dimen/app_widget_title_height"
             android:layout_height="@dimen/app_widget_title_height" />
-        <TextView
-            android:id="@+id/section_id"
-            tools:text="@string/app_name"
-            android:textColor="@android:color/white"
-            android:textSize="@dimen/subheading"
-            android:textAllCaps="true"
-            android:layout_centerInParent="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
         <ImageView
             android:id="@+id/setting"
             android:clickable="true"
@@ -35,6 +27,19 @@
             android:src="@drawable/ic_settings"
             android:layout_width="@dimen/app_widget_title_height"
             android:layout_height="@dimen/app_widget_title_height" />
+
+        <TextView
+            android:id="@+id/section_id"
+            tools:text="@string/app_name"
+            android:textColor="@android:color/white"
+            android:textSize="@dimen/subheading"
+            android:textAllCaps="true"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:singleLine="true"
+            android:layout_centerInParent="true" />
+
     </RelativeLayout>
     <ListView
         android:id="@+id/news_list"
