--- a/app/src/main/res/layout/item_app_widget.xml
+++ b/app/src/main/res/layout/item_app_widget.xml
@@ -31,6 +31,7 @@
         tools:text="@string/app_name"
         android:textColor="@color/colorPrimary"
         android:textSize="@dimen/body"
+        android:gravity="right"
         android:singleLine="true"
         android:layout_alignParentRight="true"
         android:layout_marginTop="4dp"
