--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -21,7 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="6dp"
         android:layout_marginLeft="4dp"
-        android:text="匿名用户"
+        android:text="Guest"
         android:textColor="@color/second_text_dark"
         android:textSize="@dimen/body" />
 
