--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -3,7 +3,7 @@
 
 
     <ListPreference
-        android:defaultValue="180"
+        android:defaultValue="@string/pref_sync_frequency_default"
         android:entries="@array/pref_sync_frequency_titles"
         android:entryValues="@array/pref_sync_frequency_values"
         android:key="@string/pref_sync_frequency_key"
