--- a/app/src/main/res/layout/activity_comment.xml
+++ b/app/src/main/res/layout/activity_comment.xml
@@ -14,6 +14,7 @@
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
+            app:navigationContentDescription="@string/return_to_last_activity"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="@android:color/white"
@@ -22,15 +23,16 @@
 
             <TextView
                 android:id="@+id/publish"
+                android:contentDescription="@string/publish"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_gravity="right"
+                android:layout_gravity="right|end"
                 android:gravity="center"
                 android:paddingEnd="8dp"
                 android:paddingStart="8dp"
                 android:clickable="true"
                 android:background="?attr/selectableItemBackgroundBorderless"
-                android:text="提交"
+                android:text="@string/publish"
                 android:textSize="@dimen/subheading"
                 android:textColor="?attr/colorAccent" />
         </android.support.v7.widget.Toolbar>
@@ -43,6 +45,7 @@
 
     <android.support.v7.widget.AppCompatEditText
         android:id="@+id/comment"
+        android:contentDescription="@string/write_comment"
         android:layout_marginTop="8dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
