--- a/app/src/main/res/layout/item_app_widget.xml
+++ b/app/src/main/res/layout/item_app_widget.xml
@@ -19,11 +19,13 @@
         android:id="@+id/headline"
         tools:text="@string/app_name"
         android:layout_marginLeft="6dp"
+        android:layout_marginStart="6dp"
         android:textColor="@color/primary_text_dark"
         android:textSize="@dimen/subheading"
         android:textAllCaps="true"
         android:maxLines="2"
         android:layout_toRightOf="@id/thumbnail"
+        android:layout_toEndOf="@id/thumbnail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <TextView
@@ -31,9 +33,10 @@
         tools:text="@string/app_name"
         android:textColor="@color/colorPrimary"
         android:textSize="@dimen/body"
-        android:gravity="right"
+        android:gravity="right|end"
         android:singleLine="true"
         android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_marginTop="4dp"
         android:layout_below="@id/headline"
         android:layout_width="150dp"
