--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -17,11 +17,13 @@
     <TextView
         android:id="@+id/user_name"
         android:layout_toRightOf="@id/avatar"
+        android:layout_toEndOf="@id/avatar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="6dp"
         android:layout_marginLeft="4dp"
-        android:text="Guest"
+        android:layout_marginStart="4dp"
+        android:text="@string/guest"
         android:textColor="@color/second_text_dark"
         android:textSize="@dimen/body" />
 
@@ -30,6 +32,7 @@
         android:layout_below="@id/avatar"
         android:layout_marginTop="4dp"
         android:layout_toRightOf="@id/avatar"
+        android:layout_toEndOf="@id/avatar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:text="刀法精湛"
@@ -40,6 +43,7 @@
         android:id="@+id/comment_date"
         android:layout_below="@id/comment_body"
         android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_marginTop="4dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
