--- a/app/src/main/res/layout/item_news.xml
+++ b/app/src/main/res/layout/item_news.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="8dp"
-    android:layout_marginRight="8dp"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="8dp"
     android:orientation="vertical"
     app:cardCornerRadius="2dp"
     app:cardElevation="4dp">
@@ -20,15 +20,17 @@
             android:layout_width="150dp"
             android:layout_height="200dp"
             android:scaleType="centerCrop"
-            android:transitionName="@string/transition_content_image" />
+            android:transitionName="@string/transition_share_image" />
 
         <TextView
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="4dp"
             android:layout_toRightOf="@id/image"
+            android:layout_toEndOf="@id/image"
             android:textAllCaps="true"
             android:maxLines="4"
             android:textColor="@color/primary_text_dark"
@@ -40,6 +42,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
             android:layout_below="@id/title"
             android:layout_marginTop="6dp"
             android:textColor="@color/second_text_dark"
