--- a/app/src/main/res/layout/item_section.xml
+++ b/app/src/main/res/layout/item_section.xml
@@ -16,6 +16,7 @@
         <TextView
             android:id="@+id/section"
             android:layout_marginLeft="15dp"
+            android:layout_marginStart="15dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:maxLines="1"
@@ -26,6 +27,7 @@
         <android.support.v7.widget.AppCompatCheckBox
             android:id="@+id/interested"
             android:layout_marginRight="8dp"
+            android:layout_marginEnd="8dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
