--- a/app/src/main/res/layout/news_app_widget.xml
+++ b/app/src/main/res/layout/news_app_widget.xml
@@ -12,7 +12,9 @@
         android:orientation="horizontal">
         <ImageView
             android:id="@+id/icon"
-            android:layout_alignParentLeft="true"
+            android:contentDescription="@string/label_select_interested_section"
+             android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
             android:scaleType="centerInside"
             android:paddingTop="8dp"
             android:paddingBottom="8dp"
@@ -23,6 +25,7 @@
             android:id="@+id/setting"
             android:clickable="true"
             android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
             android:scaleType="centerInside"
             android:src="@drawable/ic_settings"
             android:layout_width="@dimen/app_widget_title_height"
@@ -50,7 +53,7 @@
         android:layout_height="wrap_content"/>
     <TextView
         android:id="@+id/empty"
-        android:text="Hold on! I'm loading"
+        android:text="@string/widget_empty_list_prompt"
         android:gravity="center"
         android:textColor="@android:color/white"
         android:textSize="@dimen/subheading"
