--- a/app/src/main/res/xml/authenticator.xml
+++ b/app/src/main/res/xml/authenticator.xml
@@ -3,6 +3,6 @@
     android:accountType="@string/account_type"
     android:icon="@mipmap/ic_launcher"
     android:smallIcon="@mipmap/ic_launcher"
-    android:label="News">
+    android:label="@string/app_name">
 
 </account-authenticator>
