--- a/app/src/main/res/layout/item_app_widget.xml
+++ b/app/src/main/res/layout/item_app_widget.xml
@@ -10,6 +10,7 @@
 
     <ImageView
         android:id="@+id/thumbnail"
+        android:contentDescription="@string/this_is_news_image"
         android:layout_width="65dp"
         android:layout_height="65dp"
         android:scaleType="centerCrop"
