--- a/app/src/main/res/layout/item_news.xml
+++ b/app/src/main/res/layout/item_news.xml
@@ -19,6 +19,7 @@
 
         <ImageView
             android:id="@+id/image"
+            android:contentDescription="@string/this_is_news_image"
             android:layout_width="150dp"
             android:layout_height="200dp"
             android:scaleType="centerCrop"
