--- a/app/src/main/res/layout/activity_news.xml
+++ b/app/src/main/res/layout/activity_news.xml
@@ -9,6 +9,8 @@
     tools:context="com.guo.news.ui.NewsActivity">
 
     <android.support.design.widget.AppBarLayout
+        android:transitionGroup="true"
+        android:id="@+id/app_bar"
         android:layout_width="match_parent"
         android:layout_height="300dp"
         android:fitsSystemWindows="true"
@@ -44,8 +46,9 @@
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:behavior_overlapTop="40dp"
+        android:id="@+id/slide_bottom"
         android:transitionGroup="true"
+        app:behavior_overlapTop="40dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <LinearLayout
